JumpScript/tests/baselines/reference/parserClassDeclaration12.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration12.jump(2,4): error TS2394: Overload signature is not compatible with function implementation.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration12.jump (1 errors) ====
    class C {
       constructor();
       ~~~~~~~~~~~~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
       constructor(a) { }
    }